--- a/index.html
+++ b/index.html
@@ -1,12 +1,137 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Седона</title>
-  </head>
-  <body>
-
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p>
-
-  </body>
+<head>
+  <meta charset="utf-8">
+  <title>Седона - Главная</title>
+</head>
+<body>
+<header>
+  <nav>
+    <ul>
+      <li>
+        <a href="#">Информация</a>
+      </li>
+      <li>
+        <a href="#">Фото и видео</a>
+      </li>
+    </ul>
+    <a>
+      <img src="https://via.placeholder.com/138x70" alt="Логотип" width="138" height="70">
+    </a>
+    <ul>
+      <li>
+        <a href="#">Карта штата</a>
+      </li>
+      <li>
+        <a href="catalog.html">Гостиницы</a>
+      </li>
+    </ul>
+  </nav>
+</header>
+<main>
+  <h1>Описание Седоны</h1>
+  <section>
+    <img src="https://via.placeholder.com/456x351" alt="Добро пожаловать в Седону" width="456" height="351">
+    <h2>Седона - небольшой городок в Аризоне, заслуживающий большего!</h2>
+    <p>Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
+  </section>
+  <section>
+    <h2>Причина №1</h2>
+    <div>
+      <h3>Настоящий городок</h3>
+      <p>- №1 -</p>
+      <p>Седона - не аттракцион для туристов, там течёт своя жизнь</p>
+    </div>
+    <img src="https://via.placeholder.com/800x256" alt="Настоящий городок" width="800" height="256">
+  </section>
+  <section>
+    <h2>Опции</h2>
+    <article>
+      <h3>Жильё</h3>
+      <p>Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+    </article>
+    <article>
+      <h3>Еда</h3>
+      <p>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
+    </article>
+    <article>
+      <h3>Сувениры</h3>
+      <p>Не только китайского, но и местного производства!</p>
+    </article>
+  </section>
+  <section>
+    <h2>Причина №2</h2>
+    <img src="https://via.placeholder.com/800x256" alt="Мост дьявола" width="800" height="256">
+    <div>
+      <h3>Там есть мост дьявола</h3>
+      <p>- №2 -</p>
+      <p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
+    </div>
+  </section>
+  <section>
+    <h2>Остальные причины</h2>
+    <article>
+      <h3>Небольшая площадь</h3>
+      <p>- №3 -</p>
+      <p>Все достопримечательности находятся очень близко</p>
+    </article>
+    <article>
+      <h3>Красивая дорога</h3>
+      <p>- №4 -</p>
+      <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+    </article>
+    <article>
+      <h3>Мало туристов</h3>
+      <p>- №5 -</p>
+      <p>Большинство едет в Град Каньон и толпится там</p>
+    </article>
+  </section>
+  <section>
+    <h2>Заинтересовались?</h2>
+    <p>Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в седоне</p>
+    <a href="#">Поиск Гостиницы в Седоне</a>
+  </section>
+  <section>
+    <h2>Карта</h2>
+    <img src="https://via.placeholder.com/1199x473" alt="Карта" width="1199" height="473">
+  </section>
+</main>
+<footer>
+  <section>
+    <h2>Контактная информация. Тег и телефон</h2>
+    <p>#visitsedona</p>
+    <p>
+      Тел: <a href="tel:+74956660166" aria-label="Контактный номер телефона">+7(495)666-01-66</a>
+    </p>
+  </section>
+  <section>
+    <h2>Социальные сети</h2>
+    <ul>
+      <li>
+        <a href="#">Twitter</a>
+      </li>
+      <li>
+        <a href="#">Facebook</a>
+      </li>
+      <li>
+        <a href="#">Youtube</a>
+      </li>
+    </ul>
+  </section>
+  <section>
+    <h2>Кем создано</h2>
+    <p>
+      Website by
+      <a href="https://htmlacademy.ru/intensive/htmlcss" aria-label="Html academy">
+        <img src="https://via.placeholder.com/115x41" alt="Html academy" width="115" height="41">
+      </a>
+    </p>
+  </section>
+</footer>
+<section>
+  <h2>Форма поиска гостиницы</h2>
+  <!--    Здесь будет форма-->
+  <button type="submit">Найти</button>
+</section>
+</body>
 </html>
