3. "Graphic work" done.

--- a/catalog.html
+++ b/catalog.html
@@ -16,7 +16,7 @@
       </li>
     </ul>
     <a href="index.html">
-      <img src="https://via.placeholder.com/138x70" alt="Логотип" width="138" height="70">
+      <img src="img/logo.png" alt="Логотип" width="138" height="70">
     </a>
     <ul>
       <li>
@@ -61,7 +61,7 @@
   <section>
     <h2>Результаты поиска</h2>
     <article>
-      <img src="https://via.placeholder.com/135x90" alt="Amara Resort & SPA" width="135" height="90">
+      <img src="img/booking-amara.jpg" alt="Amara Resort & SPA" width="135" height="90">
       <div>
         <h3>Amara Resort & SPA</h3>
         <p>Гостиница</p>
@@ -71,13 +71,13 @@
       </div>
       <div>
         <div>
-          <img src="https://via.placeholder.com/91x17" alt="Рейтинг" width="91" height="17">
+          <img src="img/rating-4-stars.png" alt="Рейтинг" width="91" height="17">
           <p>Рейтинг: 8,5</p>
         </div>
       </div>
     </article>
     <article>
-      <img src="https://via.placeholder.com/135x90" alt="Amara Resort & SPA" width="135" height="90">
+      <img src="img/booking-desert.jpg" alt="Desert Quail Inn" width="135" height="90">
       <div>
         <h3>Desert Quail Inn</h3>
         <p>Мотель</p>
@@ -87,13 +87,13 @@
       </div>
       <div>
         <div>
-          <img src="https://via.placeholder.com/66x17" alt="Рейтинг" width="66" height="17">
+          <img src="img/rating-3-stars.png" alt="Рейтинг" width="66" height="17">
           <p>Рейтинг: 8,9</p>
         </div>
       </div>
     </article>
     <article>
-      <img src="https://via.placeholder.com/135x90" alt="Amara Resort & SPA" width="135" height="90">
+      <img src="img/booking-villas.jpg" alt="Villas at Poco Diablo" width="135" height="90">
       <div>
         <h3>Villas at Poco Diablo</h3>
         <p>Апартаменты</p>
@@ -103,7 +103,7 @@
       </div>
       <div>
         <div>
-          <img src="https://via.placeholder.com/42x17" alt="Рейтинг" width="42" height="17">
+          <img src="img/rating-2-stars.png" alt="Рейтинг" width="42" height="17">
           <p>Рейтинг: 9,2</p>
         </div>
       </div>
@@ -122,13 +122,22 @@
     <h2>Социальные сети</h2>
     <ul>
       <li>
-        <a href="#">Twitter</a>
+        <a href="#">
+          <img src="img/social-twitter-icon.svg" alt="Твиттер" width="17" height="17">
+          Twitter
+        </a>
       </li>
       <li>
-        <a href="#">Facebook</a>
+        <a href="#">
+          <img src="img/social-fb-icon.svg" alt="Фейсбук" width="12" height="22">
+          Facebook
+        </a>
       </li>
       <li>
-        <a href="#">Youtube</a>
+        <a href="#">
+          <img src="img/social-youtube-icon.svg" alt="Ютуб" width="20" height="16">
+          Youtube
+        </a>
       </li>
     </ul>
   </section>
@@ -137,7 +146,7 @@
     <p>
       Website by
       <a href="https://htmlacademy.ru/intensive/htmlcss" aria-label="Html academy">
-        <img src="https://via.placeholder.com/115x41" alt="Html academy" width="115" height="41">
+        <img src="img/logo-htmlacademy.png" alt="Html academy" width="115" height="41">
       </a>
     </p>
   </section>
