--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       </li>
     </ul>
     <a>
-      <img src="https://via.placeholder.com/138x70" alt="Логотип" width="138" height="70">
+      <img src="img/logo.png" alt="Логотип" width="138" height="70">
     </a>
     <ul>
       <li>
@@ -31,7 +31,7 @@
 <main>
   <h1>Описание Седоны</h1>
   <section>
-    <img src="https://via.placeholder.com/456x351" alt="Добро пожаловать в Седону" width="456" height="351">
+    <img src="img/welcome.png" alt="Добро пожаловать в Седону" width="456" height="351">
     <h2>Седона - небольшой городок в Аризоне, заслуживающий большего!</h2>
     <p>Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
   </section>
@@ -42,7 +42,7 @@
       <p>- №1 -</p>
       <p>Седона - не аттракцион для туристов, там течёт своя жизнь</p>
     </div>
-    <img src="https://via.placeholder.com/800x256" alt="Настоящий городок" width="800" height="256">
+    <img src="img/reason-1.jpg" alt="Настоящий городок" width="800" height="256">
   </section>
   <section>
     <h2>Опции</h2>
@@ -61,7 +61,7 @@
   </section>
   <section>
     <h2>Причина №2</h2>
-    <img src="https://via.placeholder.com/800x256" alt="Мост дьявола" width="800" height="256">
+    <img src="img/reason-2.jpg" alt="Мост дьявола" width="800" height="256">
     <div>
       <h3>Там есть мост дьявола</h3>
       <p>- №2 -</p>
@@ -93,7 +93,7 @@
   </section>
   <section>
     <h2>Карта</h2>
-    <img src="https://via.placeholder.com/1199x473" alt="Карта" width="1199" height="473">
+    <img src="img/map.png" alt="Карта" width="1199" height="593">
   </section>
 </main>
 <footer>
@@ -108,13 +108,22 @@
     <h2>Социальные сети</h2>
     <ul>
       <li>
-        <a href="#">Twitter</a>
+        <a href="#">
+          <img src="img/social-twitter-icon.svg" alt="Твиттер" width="17" height="17">
+          Twitter
+        </a>
       </li>
       <li>
-        <a href="#">Facebook</a>
+        <a href="#">
+          <img src="img/social-fb-icon.svg" alt="Фейсбук" width="12" height="22">
+          Facebook
+        </a>
       </li>
       <li>
-        <a href="#">Youtube</a>
+        <a href="#">
+          <img src="img/social-youtube-icon.svg" alt="Ютуб" width="20" height="16">
+          Youtube
+        </a>
       </li>
     </ul>
   </section>
@@ -123,7 +132,7 @@
     <p>
       Website by
       <a href="https://htmlacademy.ru/intensive/htmlcss" aria-label="Html academy">
-        <img src="https://via.placeholder.com/115x41" alt="Html academy" width="115" height="41">
+        <img src="img/logo-htmlacademy.png" alt="Html academy" width="115" height="41">
       </a>
     </p>
   </section>
