--- a/catalog.html
+++ b/catalog.html
@@ -9,65 +9,101 @@
   <nav>
     <ul>
       <li>
-        <a href="#">Информация</a>
+        <a href="#" aria-label="Ссылка на страницу Информации">Информация</a>
       </li>
       <li>
-        <a href="#">Фото и видео</a>
+        <a href="#" aria-label="Ссылка на страницу Фото и Видео">Фото и видео</a>
       </li>
     </ul>
-    <a href="index.html">
+    <a href="index.html" aria-label="Ссылка на главную страницу">
       <img src="img/logo.png" alt="Логотип" width="138" height="70">
     </a>
     <ul>
       <li>
-        <a href="#">Карта штата</a>
+        <a href="#" aria-label="Ссылка на страницу Карту Штата">Карта штата</a>
       </li>
       <li>
-        <a class="current-link">Гостиницы</a>
+        <a class="current-link" aria-label="Ссылка на страницу Гостиницы">Гостиницы</a>
       </li>
     </ul>
   </nav>
 </header>
 <main>
   <section>
-    <h2>Фильтр</h2>
-    <!--    Здесь будет форма-->
+    <h2 class="visually-hidden">Фильтр</h2>
+    <form method="get" action="#">
+      <fieldset>
+        <legend>Инфраструктура</legend>
+        <label>
+          <input type="checkbox" name="swimming-pool" checked>
+          Бассейн
+        </label>
+        <label>
+          <input type="checkbox" name="parking">
+          Парковка
+        </label>
+        <label>
+          <input type="checkbox" name="wi-fi">
+          Wi-Fi
+        </label>
+      </fieldset>
+      <fieldset>
+        <legend>Тип жилья:</legend>
+        <label>
+          <input type="checkbox" name="hostel" checked>
+          Гостиница
+        </label>
+        <label>
+          <input type="checkbox" name="motel" checked>
+          Мотель
+        </label>
+        <label>
+          <input type="checkbox" name="flat" checked>
+          Апартаменты
+        </label>
+      </fieldset>
+      <fieldset>
+        <legend>Стоимость в сутки (р):</legend>
+        <!--TODO Here will be a range filter-->
+      </fieldset>
+      <button type="submit" title="Показать по фильтру">Показать</button>
+    </form>
   </section>
   <section>
-    <h2>Сортивка</h2>
+    <h2 class="visually-hidden">Сортивка</h2>
     <h3>
       Найдено: 3
     </h3>
     <ul>
       <li>
-        <a href="#" class="current-sort-link">По цене</a>
+        <a href="#" class="current-sort-link" aria-label="Сортировать по цене">По цене</a>
       </li>
       <li>
-        <a href="#">По типу</a>
+        <a href="#" aria-label="Сортировать по типу">По типу</a>
       </li>
       <li>
-        <a href="#">По рейтингу</a>
+        <a href="#" aria-label="Сортировать по рейтингу">По рейтингу</a>
       </li>
     </ul>
     <ul>
       <li>
-        <a href="#" class="current-sort-link">По возрастанию</a>
+        <a href="#" class="current-sort-link" aria-label="Сортировать по возрастанию">По возрастанию</a>
       </li>
       <li>
-        <a href="#">По убыванию</a>
+        <a href="#" aria-label="Сортировать по убыванию">По убыванию</a>
       </li>
     </ul>
   </section>
   <section>
-    <h2>Результаты поиска</h2>
+    <h2 class="visually-hidden">Результаты поиска</h2>
     <article>
       <img src="img/booking-amara.jpg" alt="Amara Resort & SPA" width="135" height="90">
       <div>
         <h3>Amara Resort & SPA</h3>
         <p>Гостиница</p>
         <p>от 4000 р.</p>
-        <a href="#">Подробнее</a>
-        <a href="#">Забронировать</a>
+        <a href="#" aria-label="Ссылка подробнее об объекте">Подробнее</a>
+        <a href="#" aria-label="Ссылка забранировать объект">Забронировать</a>
       </div>
       <div>
         <div>
@@ -82,8 +118,8 @@
         <h3>Desert Quail Inn</h3>
         <p>Мотель</p>
         <p>от 3000 р.</p>
-        <a href="#">Подробнее</a>
-        <a href="#">Забронировать</a>
+        <a href="#" aria-label="Ссылка подробнее об объекте">Подробнее</a>
+        <a href="#" aria-label="Ссылка забранировать объект">Забронировать</a>
       </div>
       <div>
         <div>
@@ -98,8 +134,8 @@
         <h3>Villas at Poco Diablo</h3>
         <p>Апартаменты</p>
         <p>от 2000 р.</p>
-        <a href="#">Подробнее</a>
-        <a href="#">Забронировать</a>
+        <a href="#" aria-label="Ссылка подробнее об объекте">Подробнее</a>
+        <a href="#" aria-label="Ссылка забранировать объект">Забронировать</a>
       </div>
       <div>
         <div>
@@ -112,37 +148,34 @@
 </main>
 <footer>
   <section>
-    <h2>Контактная информация. Тег и телефон</h2>
+    <h2 class="visually-hidden">Контактная информация. Тег и телефон</h2>
     <p>#visitsedona</p>
     <p>
       Тел: <a href="tel:+74956660166" aria-label="Контактный номер телефона">+7(495)666-01-66</a>
     </p>
   </section>
   <section>
-    <h2>Социальные сети</h2>
+    <h2 class="visually-hidden">Социальные сети</h2>
     <ul>
       <li>
-        <a href="#">
+        <a href="#" aria-label="Twitter">
           <img src="img/social-twitter-icon.svg" alt="Твиттер" width="17" height="17">
-          Twitter
         </a>
       </li>
       <li>
-        <a href="#">
+        <a href="#" aria-label="Facebook">
           <img src="img/social-fb-icon.svg" alt="Фейсбук" width="12" height="22">
-          Facebook
         </a>
       </li>
       <li>
-        <a href="#">
+        <a href="#" aria-label="Youtube">
           <img src="img/social-youtube-icon.svg" alt="Ютуб" width="20" height="16">
-          Youtube
         </a>
       </li>
     </ul>
   </section>
   <section>
-    <h2>Кем создано</h2>
+    <h2 class="visually-hidden">Кем создано</h2>
     <p>
       Website by
       <a href="https://htmlacademy.ru/intensive/htmlcss" aria-label="Html academy">
