7. "Decor elements" in progress.

--- a/catalog.html
+++ b/catalog.html
@@ -18,8 +18,8 @@
         <a href="#" aria-label="Ссылка на страницу Фото и Видео">Фото и видео</a>
       </li>
     </ul>
-    <a href="index.html" aria-label="Ссылка на главную страницу">
-      <img src="img/logo.png" alt="Логотип" width="138" height="70">
+    <a href="index.html" aria-label="Ссылка на главную страницу" class="logo>
+      <img src=" img/logo.png" alt="Логотип" width="138" height="70">
     </a>
     <ul>
       <li>
