--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <img src="img/welcome.png" alt="Добро пожаловать в Седону" width="458" height="352">
     </div>
     <div class="senoda-intro__text">
-      <h2>Седона - небольшой городок в Аризоне, заслуживающий большего!</h2>
+      <h2>Седона &mdash; небольшой городок в Аризоне, заслуживающий большего!</h2>
       <p>Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
     </div>
   </section>
@@ -44,7 +44,7 @@
     <h2 class="visually-hidden">Причина №1</h2>
     <div class="reason-section-text-div">
       <h3>Настоящий городок</h3>
-      <p>- №1 -</p>
+      <p>&mdash; №1 &mdash;</p>
       <p>Седона - не аттракцион для туристов, там течёт своя жизнь</p>
     </div>
   </section>
@@ -68,7 +68,7 @@
     <img src="img/reason-2.jpg" alt="Мост дьявола" width="800" height="256">
     <div class="reason-section-text-div">
       <h3>Там есть мост дьявола</h3>
-      <p>- №2 -</p>
+      <p>&mdash; №2 &mdash;</p>
       <p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
     </div>
   </section>
@@ -76,25 +76,95 @@
     <h2 class="visually-hidden">Остальные причины</h2>
     <article>
       <h3>Небольшая площадь</h3>
-      <p>- №3 -</p>
+      <p>&mdash; №3 &mdash;</p>
       <p>Все достопримечательности находятся очень близко</p>
     </article>
     <article>
       <h3>Красивая дорога</h3>
-      <p>- №4 -</p>
+      <p>&mdash; №4 &mdash;</p>
       <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
     </article>
     <article>
       <h3>Мало туристов</h3>
-      <p>- №5 -</p>
-      <p>Большинство едет в Град Каньон и толпится там</p>
+      <p>&mdash; №5 &mdash;</p>
+      <p>
+        Большинство едет в Гранд Каньон<br>
+        и толпится там
+      </p>
     </article>
   </section>
   <section class="go-to-us-section">
     <h2>Заинтересовались?</h2>
-    <p>Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в седоне</p>
+    <p>Укажите предполагаемые даты поездки</p>
+    <p>и мы покажем вам лучшие предложения гостиниц в седоне</p>
     <a href="#" class="button open-search-form-button">Поиск Гостиницы в Седоне</a>
   </section>
+  <div class="div-for-search-form">
+    <section class="search-form">
+      <h2 class="visually-hidden">Форма поиска гостиницы</h2>
+      <form method="get" action="#">
+        <p>
+          <label>
+            Дата заезда: <input type="text" placeholder="24 апреля 2017" class="long-input">
+            <button type="button" class="button button-icon button-calendar" aria-label="календарь">
+              <svg width="21" height="23" viewBox="0 0 21 23" fill="black" xmlns="http://www.w3.org/2000/svg">
+                <path fill-rule="evenodd" clip-rule="evenodd"
+                      d="M16.406 3.02498H19.251C20.217 3.02498 21 3.84698 21 4.86198V21.164C21 22.179 20.217 23 19.251 23H1.75C0.784 23 0 22.179 0 21.164V4.86198C0 3.84698 0.784 3.02498 1.75 3.02498H4.593V1.64798C4.593 1.26698 4.887 0.958984 5.25 0.958984C5.612 0.958984 5.906 1.26698 5.906 1.64798V3.02498H9.844V1.64798C9.844 1.26698 10.138 0.958984 10.501 0.958984C10.862 0.958984 11.156 1.26698 11.156 1.64798V3.02498H15.094V1.64798C15.094 1.26698 15.387 0.958984 15.75 0.958984C16.112 0.958984 16.406 1.26698 16.406 1.64798V3.02498ZM19.5646 21.484C19.6466 21.3979 19.691 21.2828 19.688 21.164H19.689V4.86198C19.689 4.60898 19.493 4.40298 19.252 4.40298H16.407V5.78098C16.407 6.16198 16.113 6.46998 15.751 6.46998C15.388 6.46998 15.095 6.16198 15.095 5.78098V4.40298H11.157V5.78098C11.157 6.16198 10.863 6.46998 10.502 6.46998C10.139 6.46998 9.845 6.16198 9.845 5.78098V4.40298H5.907V5.78098C5.907 6.16198 5.613 6.46998 5.251 6.46998C4.888 6.46998 4.594 6.16198 4.594 5.78098V4.40298H1.75C1.50263 4.40953 1.30696 4.61458 1.312 4.86198V21.164C1.30696 21.4114 1.50263 21.6164 1.75 21.623H19.251C19.3698 21.6201 19.4826 21.5701 19.5646 21.484Z"/>
+                <path fill-rule="evenodd" clip-rule="evenodd"
+                      d="M4.59399 9.2251H7.21899V11.2911H4.59399V9.2251ZM4.59399 12.6681H7.21899V14.7351H4.59399V12.6681ZM7.21899 16.1121H4.59399V18.1781H7.21899V16.1121ZM9.18799 16.1121H11.813V18.1781H9.18799V16.1121ZM11.813 12.6681H9.18799V14.7351H11.813V12.6681ZM9.18799 9.2251H11.813V11.2911H9.18799V9.2251ZM16.406 16.1121H13.781V18.1781H16.406V16.1121ZM13.781 12.6681H16.406V14.7351H13.781V12.6681ZM16.406 9.2251H13.781V11.2911H16.406V9.2251Z"/>
+              </svg>
+            </button>
+          </label>
+        </p>
+        <p>
+          <label>
+            Дата выезда: <input type="text" placeholder="4 июля 2017" class="long-input">
+            <button type="button" class="button button-icon button-calendar" aria-label="календарь">
+              <svg width="21" height="23" viewBox="0 0 21 23" fill="black" xmlns="http://www.w3.org/2000/svg">
+                <path fill-rule="evenodd" clip-rule="evenodd"
+                      d="M16.406 3.02498H19.251C20.217 3.02498 21 3.84698 21 4.86198V21.164C21 22.179 20.217 23 19.251 23H1.75C0.784 23 0 22.179 0 21.164V4.86198C0 3.84698 0.784 3.02498 1.75 3.02498H4.593V1.64798C4.593 1.26698 4.887 0.958984 5.25 0.958984C5.612 0.958984 5.906 1.26698 5.906 1.64798V3.02498H9.844V1.64798C9.844 1.26698 10.138 0.958984 10.501 0.958984C10.862 0.958984 11.156 1.26698 11.156 1.64798V3.02498H15.094V1.64798C15.094 1.26698 15.387 0.958984 15.75 0.958984C16.112 0.958984 16.406 1.26698 16.406 1.64798V3.02498ZM19.5646 21.484C19.6466 21.3979 19.691 21.2828 19.688 21.164H19.689V4.86198C19.689 4.60898 19.493 4.40298 19.252 4.40298H16.407V5.78098C16.407 6.16198 16.113 6.46998 15.751 6.46998C15.388 6.46998 15.095 6.16198 15.095 5.78098V4.40298H11.157V5.78098C11.157 6.16198 10.863 6.46998 10.502 6.46998C10.139 6.46998 9.845 6.16198 9.845 5.78098V4.40298H5.907V5.78098C5.907 6.16198 5.613 6.46998 5.251 6.46998C4.888 6.46998 4.594 6.16198 4.594 5.78098V4.40298H1.75C1.50263 4.40953 1.30696 4.61458 1.312 4.86198V21.164C1.30696 21.4114 1.50263 21.6164 1.75 21.623H19.251C19.3698 21.6201 19.4826 21.5701 19.5646 21.484Z"/>
+                <path fill-rule="evenodd" clip-rule="evenodd"
+                      d="M4.59399 9.2251H7.21899V11.2911H4.59399V9.2251ZM4.59399 12.6681H7.21899V14.7351H4.59399V12.6681ZM7.21899 16.1121H4.59399V18.1781H7.21899V16.1121ZM9.18799 16.1121H11.813V18.1781H9.18799V16.1121ZM11.813 12.6681H9.18799V14.7351H11.813V12.6681ZM9.18799 9.2251H11.813V11.2911H9.18799V9.2251ZM16.406 16.1121H13.781V18.1781H16.406V16.1121ZM13.781 12.6681H16.406V14.7351H13.781V12.6681ZM16.406 9.2251H13.781V11.2911H16.406V9.2251Z"/>
+              </svg>
+            </button>
+          </label>
+        </p>
+        <p class="two-labels-paragraph">
+          <label>
+            Взрослые:
+            <button type="button" class="button button-icon button-decrease" aria-label="уменьшить">
+              <svg width="12" height="3" viewBox="0 0 12 3" fill="black" xmlns="http://www.w3.org/2000/svg">
+                <rect width="12" height="3"/>
+              </svg>
+            </button>
+            <input type="text" placeholder="2" class="short-input">
+            <button type="button" class="button button-icon" aria-label="увеличить">
+              <svg width="11" height="11" viewBox="0 0 11 11" fill="black" xmlns="http://www.w3.org/2000/svg">
+                <path fill-rule="evenodd" clip-rule="evenodd"
+                      d="M4.23086 6.76932V11H6.76932V6.76932H11V4.23086H6.76932V0H4.23085V4.23086H0V6.76932H4.23086Z"/>
+              </svg>
+            </button>
+          </label>
+          <label>
+            Дети:
+            <button type="button" class="button button-icon button-decrease" aria-label="уменьшить">
+              <svg width="12" height="3" viewBox="0 0 12 3" fill="black" xmlns="http://www.w3.org/2000/svg">
+                <rect width="12" height="3"/>
+              </svg>
+            </button>
+            <input type="text" placeholder="0" class="short-input">
+            <button type="button" class="button button-icon" aria-label="увеличить">
+              <svg width="11" height="11" viewBox="0 0 11 11" fill="black" xmlns="http://www.w3.org/2000/svg">
+                <path fill-rule="evenodd" clip-rule="evenodd"
+                      d="M4.23086 6.76932V11H6.76932V6.76932H11V4.23086H6.76932V0H4.23085V4.23086H0V6.76932H4.23086Z"/>
+              </svg>
+            </button>
+          </label>
+        </p>
+        <button type="submit" title="Найти" class="button search-button">Найти</button>
+      </form>
+    </section>
+  </div>
   <section>
     <h2 class="visually-hidden">Карта</h2>
     <img src="img/map.png" alt="Карта" width="1199" height="593">
@@ -105,7 +175,7 @@
     <h2 class="visually-hidden">Контактная информация. Тег и телефон</h2>
     <p>#visitsedona</p>
     <p>
-      Тел: <a href="tel:+74956660166" aria-label="Контактный номер телефона">+7(495)666-01-66</a>
+      Тел: <a href="tel:+74956660166" aria-label="Контактный номер телефона">+7(495) 666-01-66</a>
     </p>
   </section>
   <section class="social-section">
@@ -139,23 +209,5 @@
     </a>
   </section>
 </footer>
-<section class="search-form">
-  <h2 class="visually-hidden">Форма поиска гостиницы</h2>
-  <form method="get" action="#">
-    <label>
-      Дата заезда:<input type="text" placeholder="24 апреля 2017">
-    </label>
-    <label>
-      Дата выезда:<input type="text" placeholder="4 июля 2017">
-    </label>
-    <label>
-      Взрослые:<input type="text" placeholder="2">
-    </label>
-    <label>
-      Дети:<input type="text" placeholder="0">
-    </label>
-    <button type="submit" title="Найти" class="button search-button">Найти</button>
-  </form>
-</section>
 </body>
 </html>
