9. "JS - Form appearance animation & required fields animation" finished.

--- a/index.html
+++ b/index.html
@@ -100,12 +100,12 @@
     <a href="#" class="button open-search-form-button">Поиск Гостиницы в Седоне</a>
   </section>
   <div class="div-for-search-form">
-    <section class="search-form">
+    <section class="search-form modal modal-show">
       <h2 class="visually-hidden">Форма поиска гостиницы</h2>
       <form method="get" action="#">
         <p>
           <label>
-            Дата заезда: <input type="text" placeholder="24 апреля 2017" class="long-input">
+            Дата заезда: <input type="text" placeholder="24 апреля 2017" class="long-input date-in-input">
           </label>
           <button type="button" class="button button-icon button-calendar" aria-label="календарь">
             <svg width="21" height="23" viewBox="0 0 21 23" fill="black" xmlns="http://www.w3.org/2000/svg">
@@ -118,7 +118,7 @@
         </p>
         <p>
           <label>
-            Дата выезда: <input type="text" placeholder="4 июля 2017" class="long-input">
+            Дата выезда: <input type="text" placeholder="4 июля 2017" class="long-input date-out-input">
           </label>
           <button type="button" class="button button-icon button-calendar" aria-label="календарь">
             <svg width="21" height="23" viewBox="0 0 21 23" fill="black" xmlns="http://www.w3.org/2000/svg">
@@ -220,5 +220,6 @@
     </a>
   </section>
 </footer>
+<script src="js/script.min.js"></script>
 </body>
 </html>
